<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/producer_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/producer_message"/>

    <EditText android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_find"
        android:onClick="findFacilities"/>
    <TextView
        android:id="@+id/consumer_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/consumer_message"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_post"
        android:onClick="advertiseFacilities"/>

</LinearLayout>
